Update the local time before we update the timebox. Fixes the issue with time displayed being one step behind.

BUG: 321028
BUG: 296829
REVIEW: 110973